<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.seclass.prj2.MainActivity"
    tools:ignore="MergeRootFrame">

	<LinearLayout
	    android:id="@+id/LinearLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="edu.gatech.seclass.prj2.MainActivity" >

	    <TextView
	        android:id="@+id/txt_welcome"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_welcome" />

	    <Button
	        android:id="@+id/btn_add_customer"
	        android:layout_width="184dp"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_add_customer" />

	    <Button
	        android:id="@+id/btn_manage_customers"
	        android:layout_width="183dp"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_manage_customers" />

	    <Button
	        android:id="@+id/btn_transaction"
	        android:layout_width="183dp"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_transaction" />

	</LinearLayout>
    
</FrameLayout>

