<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:paddingLeft="7dp"
	android:paddingTop="7dp"
	android:paddingRight="7dp"
    tools:context="edu.gatech.seclass.prj2.CustomerAddActivity" >


    <TextView
        android:id="@+id/customer_add_lbl_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_firstname" />

    <EditText
        android:id="@+id/customer_add_txt_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/customer_add_lbl_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_lastname" />

    <EditText
        android:id="@+id/customer_add_txt_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/customer_add_lbl_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_zipcode" />

    <EditText
        android:id="@+id/customer_add_txt_zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/customer_add_lbl_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email" />

    <EditText
        android:id="@+id/customer_add_txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/customer_add_btn_save_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_customer" />
</LinearLayout>