<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="7dp"
    android:paddingRight="7dp"
    android:paddingTop="7dp"
    tools:context="edu.gatech.seclass.prj2.TransactionActivity" >

    <SearchView
        android:id="@+id/transaction_search_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </SearchView>

    <TextView
        android:id="@+id/transaction_lbl_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_lastname" />

    <EditText
        android:id="@+id/transaction_txt_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/transaction_lbl_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_firstname" />

    <EditText
        android:id="@+id/transaction_txt_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/transaction_lbl_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_discount" />

    <EditText
        android:id="@+id/transaction_txt_discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal" />

    <CheckBox
        android:id="@+id/transaction_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/lbl_gold_customer" />

    <TextView
        android:id="@+id/transaction_lbl_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_amount" />

    <EditText
        android:id="@+id/transaction_txt_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/transaction_btn_read_cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_read_cc" />

        <Button
            android:id="@+id/transaction_btn_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_payment" />

    </LinearLayout>

    <TextView
        android:id="@+id/transaction_cc_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/transaction_cc_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/transaction_cc_exp_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/transaction_cc_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>